--- a/package.json
+++ b/package.json
@@ -160,6 +160,8 @@
     "@types/highland": "^2.12.11",
     "@types/jaeger-client": "^3.15.4",
     "@types/jest": "^26.0.20",
+    "@types/json5": "^0.0.30",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.167",
     "@types/lru-cache": "^5.1.0",
     "@types/luxon": "^1.25.1",
@@ -169,8 +171,10 @@
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
     "@types/node-fetch": "^2.5.8",
+    "@types/nodemailer": "^6.4.0",
     "@types/passport": "^1.0.5",
     "@types/passport-jwt": "^3.0.3",
+    "@types/passport-strategy": "^0.2.35",
     "@types/pump": "^1.1.0",
     "@types/qs": "^6.9.5",
     "@types/ramda": "^0.27.34",
