--- a/package.json
+++ b/package.json
@@ -205,5 +205,12 @@
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.5"
+  },
+  "nodemonConfig": {
+    "verbose": true,
+    "watch": [
+      "src"
+    ],
+    "delay": "2.5"
   }
 }
