--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "check:circular": "npx madge --circular --extensions ts ./",
     "doc": "npx @compodoc/compodoc -p tsconfig.json -s"
   },
+  "resolutions": {
+    "typescript": "4.1.5"
+  },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
     "@nestjs/bull": "^0.3.1",
     "@nestjs/common": "^7.6.13",
     "@nestjs/core": "^7.6.13",
     "@nestjs/cqrs": "^7.0.1",
-    "@nestjs/graphql": "^7.9.9",
+    "@nestjs/graphql": "^7.9.10",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.3",
     "@nestjs/passport": "^7.1.5",
@@ -36,7 +39,7 @@
     "@nestjs/platform-socket.io": "^7.6.13",
     "@nestjs/platform-ws": "^7.6.13",
     "@nestjs/schedule": "^0.4.2",
-    "@nestjs/swagger": "^4.7.13",
+    "@nestjs/swagger": "^4.7.15",
     "@nestjs/terminus": "^7.1.0",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.13",
@@ -96,7 +99,7 @@
     "luxon": "^1.26.0",
     "mime-types": "^2.1.29",
     "minio": "^7.0.18",
-    "mongoose": "^5.11.17",
+    "mongoose": "^5.11.18",
     "mongoose-autopopulate": "^0.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
@@ -121,7 +124,7 @@
     "reflect-metadata": "^0.1.13",
     "request-ip": "^2.1.3",
     "response-time": "^2.3.2",
-    "rxjs": "^6.6.3",
+    "rxjs": "^6.6.6",
     "sharp": "^0.27.2",
     "shortid": "^2.2.16",
     "socket.io": "^3.1.1",
@@ -201,10 +204,10 @@
     "pretty-quick": "^3.1.0",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.1",
+    "ts-jest": "^26.5.2",
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
-    "typescript": "^4.1.5"
+    "typescript": "^4.2.2"
   },
   "nodemonConfig": {
     "verbose": true,
