--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@nestjs/cqrs": "^7.0.1",
     "@nestjs/graphql": "^7.9.10",
     "@nestjs/jwt": "^7.2.0",
-    "@nestjs/mongoose": "^7.2.3",
+    "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/platform-socket.io": "^7.6.13",
@@ -74,6 +74,7 @@
     "dataloader": "^2.0.0",
     "date-fns": "^2.17.0",
     "dayjs": "^1.10.4",
+    "elastic-apm-node": "^3.12.1",
     "email-templates": "^8.0.3",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
@@ -103,7 +104,7 @@
     "mongoose-autopopulate": "^0.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "node-buffs": "^0.8.11",
+    "node-buffs": "^0.8.12",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.5.0",
     "opentracing": "^0.14.5",
