--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     ".env.base"
   ],
   "scripts": {
-    "clean": "rm -rf ./dist && rm -rf ./declaration",
+    "clean": "rm -rf ./dist",
     "tsc": "tsc",
     "build": "yarn clean && yarn tsc",
+    "build:next": "NODE_ENV=production yarn rollup -c rollup.config.ts",
     "dev": "node -r ts-node/register src/dev.ts",
     "dev:watch": "nodemon --exec node -r ts-node/register src/dev.ts",
     "test": "ENV=test jest",
@@ -22,16 +23,13 @@
     "check:circular": "npx madge --circular --extensions ts ./",
     "doc": "npx @compodoc/compodoc -p tsconfig.json -s"
   },
-  "resolutions": {
-    "typescript": "4.1.5"
-  },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
     "@nestjs/bull": "^0.3.1",
     "@nestjs/common": "^7.6.13",
     "@nestjs/core": "^7.6.13",
     "@nestjs/cqrs": "^7.0.1",
-    "@nestjs/graphql": "^7.9.10",
+    "@nestjs/graphql": "^7.9.11",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
@@ -43,7 +41,7 @@
     "@nestjs/terminus": "^7.1.0",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.13",
-    "@sentry/node": "^6.2.0",
+    "@sentry/node": "^6.2.1",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.5",
     "amqplib": "^0.7.0",
@@ -70,9 +68,9 @@
     "connect-redis": "^5.1.0",
     "cookie-parser": "^1.4.5",
     "cron": "^1.8.2",
-    "cron-parser": "^3.2.0",
+    "cron-parser": "^3.3.0",
     "dataloader": "^2.0.0",
-    "date-fns": "^2.17.0",
+    "date-fns": "^2.19.0",
     "dayjs": "^1.10.4",
     "elastic-apm-node": "^3.12.1",
     "email-templates": "^8.0.3",
@@ -156,7 +154,7 @@
     "@types/express": "4.17.11",
     "@types/express-rate-limit": "^5.1.1",
     "@types/express-session": "^1.17.3",
-    "@types/fs-extra": "^9.0.7",
+    "@types/fs-extra": "^9.0.8",
     "@types/glob": "^7.1.3",
     "@types/highland": "^2.12.11",
     "@types/jaeger-client": "^3.15.4",
@@ -164,7 +162,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.168",
     "@types/lru-cache": "^5.1.0",
-    "@types/luxon": "^1.26.0",
+    "@types/luxon": "^1.26.1",
     "@types/mime-types": "^2.1.0",
     "@types/minimatch": "^3.0.3",
     "@types/minio": "^7.0.7",
@@ -190,13 +188,14 @@
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0",
     "@types/xml2js": "^0.4.8",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "eslint": "^7.20.0",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "eslint": "^7.21.0",
     "eslint-config-alloy": "^3.10.0",
+    "eslint-import-resolver-node": "^0.3.4",
     "eslint-plugin-import": "^2.22.1",
     "glob": "^7.1.6",
-    "husky": "^5.1.1",
+    "husky": "^5.1.3",
     "jest": "^26.6.3",
     "minimatch": "^3.0.4",
     "mysql": "^2.18.1",
@@ -205,10 +204,10 @@
     "pretty-quick": "^3.1.0",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.2",
+    "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.3"
   },
   "nodemonConfig": {
     "verbose": true,
