--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "bull": "^3.20.1",
-    "cache-manager": "^3.4.0",
+    "cache-manager": "^3.4.1",
     "cache-manager-redis-store": "^2.0.0",
     "chance": "^1.1.7",
     "check-disk-space": "^2.1.0",
@@ -77,7 +77,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
-    "file-type": "^16.2.0",
+    "file-type": "^16.3.0",
     "fs-extra": "^9.1.0",
     "graphql": "^15.5.0",
     "graphql-type-json": "^0.3.2",
@@ -98,10 +98,11 @@
     "luxon": "^1.26.0",
     "mime-types": "^2.1.29",
     "minio": "^7.0.18",
-    "mongoose": "^5.11.18",
+    "mongoose": "^5.11.19",
     "mongoose-autopopulate": "^0.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "mysql2": "^2.2.5",
     "node-buffs": "^0.8.12",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.5.0",
@@ -133,7 +134,7 @@
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2",
     "validator": "^13.5.2",
-    "ws": "^7.4.3",
+    "ws": "^7.4.4",
     "xlsx": "^0.16.9",
     "xml2js": "^0.4.23"
   },
@@ -162,7 +163,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.168",
     "@types/lru-cache": "^5.1.0",
-    "@types/luxon": "^1.26.1",
+    "@types/luxon": "^1.26.2",
     "@types/mime-types": "^2.1.0",
     "@types/minimatch": "^3.0.3",
     "@types/minio": "^7.0.7",
@@ -174,7 +175,7 @@
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-strategy": "^0.2.35",
     "@types/pump": "^1.1.1",
-    "@types/qs": "^6.9.5",
+    "@types/qs": "^6.9.6",
     "@types/ramda": "^0.27.38",
     "@types/redis": "^2.8.28",
     "@types/redlock": "^4.0.1",
@@ -198,7 +199,6 @@
     "husky": "^5.1.3",
     "jest": "^26.6.3",
     "minimatch": "^3.0.4",
-    "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
@@ -214,6 +214,6 @@
     "watch": [
       "src"
     ],
-    "delay": "2.5"
+    "delay": 2.5
   }
 }
