refactor: add ua detect helper and set cookie for browser only

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@nestjs/platform-socket.io": "^7.6.14",
     "@nestjs/platform-ws": "^7.6.14",
     "@nestjs/schedule": "^0.4.3",
-    "@nestjs/swagger": "^4.7.16",
+    "@nestjs/swagger": "^4.8.0",
     "@nestjs/terminus": "^7.1.0",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.14",
@@ -45,17 +45,17 @@
     "alipay-sdk": "^3.1.5",
     "amqplib": "^0.7.1",
     "apollo-opentracing": "^2.1.0",
-    "apollo-server": "^2.21.1",
+    "apollo-server": "^2.21.2",
     "apollo-server-cache-redis": "^1.2.3",
     "apollo-server-caching": "^0.5.3",
     "apollo-server-env": "^3.0.0",
-    "apollo-server-express": "^2.21.1",
+    "apollo-server-express": "^2.21.2",
     "apollo-server-plugin-response-cache": "^0.6.0",
     "apollo-server-types": "^0.6.3",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
-    "bull": "^3.20.1",
+    "bull": "^3.21.1",
     "cache-manager": "^3.4.1",
     "cache-manager-redis-store": "^2.0.0",
     "chance": "^1.1.7",
@@ -97,7 +97,7 @@
     "luxon": "^1.26.0",
     "mime-types": "^2.1.29",
     "minio": "^7.0.18",
-    "mongoose": "^5.12.0",
+    "mongoose": "^5.12.1",
     "mongoose-autopopulate": "^0.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
@@ -114,7 +114,7 @@
     "pump": "^3.0.0",
     "qiniu": "^7.3.2",
     "qrcode": "^1.4.4",
-    "qs": "^6.9.6",
+    "qs": "^6.10.0",
     "ramda": "^0.27.1",
     "raw-body": "^2.4.1",
     "redis": "^3.0.2",
@@ -130,6 +130,7 @@
     "swagger-ui-express": "^4.1.6",
     "tmp": "^0.2.1",
     "typeorm": "^0.2.31",
+    "ua-parser-js": "^0.7.24",
     "uuid": "^8.3.2",
     "validator": "^13.5.2",
     "ws": "^7.4.4",
@@ -184,6 +185,7 @@
     "@types/socket.io": "^2.1.13",
     "@types/socket.io-redis": "^1.0.27",
     "@types/supertest": "^2.0.10",
+    "@types/ua-parser-js": "^0.7.35",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0",
     "@types/xml2js": "^0.4.8",
