chore: babel config

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "asuna-node-server",
+  "name": "@danielwii/asuna-node-server",
   "version": "0.7.1",
-  "repository": "git@github.com:danielwii/asuna-node-server.git",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": "git@github.com:danielwii/asuna-node-server.git",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "files": [
     "dist",
     "src",
@@ -13,8 +16,9 @@
   ],
   "scripts": {
     "clean": "rm -rf ./dist",
-    "tsc": "tsc",
-    "build": "yarn clean && yarn tsc",
+    "build:watch": "yarn clean && yarn tsc",
+    "build": "yarn clean && yarn tsc --emitDeclarationOnly && NODE_ENV=production yarn build:js",
+    "build:js": "babel src --out-dir dist --extensions '.ts' --source-maps",
     "dev": "node -r ts-node/register src/dev.ts",
     "dev:watch": "nodemon --exec node -r ts-node/register src/dev.ts",
     "test": "ENV=test jest",
@@ -25,21 +29,21 @@
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
     "@nestjs/bull": "^0.3.1",
-    "@nestjs/common": "^7.6.14",
-    "@nestjs/core": "^7.6.14",
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/core": "^7.6.15",
     "@nestjs/cqrs": "^7.0.1",
-    "@nestjs/graphql": "^7.10.2",
+    "@nestjs/graphql": "^7.10.3",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.6.14",
-    "@nestjs/platform-socket.io": "^7.6.14",
-    "@nestjs/platform-ws": "^7.6.14",
+    "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-socket.io": "^7.6.15",
+    "@nestjs/platform-ws": "^7.6.15",
     "@nestjs/schedule": "^0.4.3",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/terminus": "^7.1.0",
     "@nestjs/typeorm": "^7.1.5",
-    "@nestjs/websockets": "^7.6.14",
+    "@nestjs/websockets": "^7.6.15",
     "@sentry/node": "^6.2.3",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.5",
@@ -97,7 +101,7 @@
     "luxon": "^1.26.0",
     "mime-types": "^2.1.29",
     "minio": "^7.0.18",
-    "mongoose": "^5.12.1",
+    "mongoose": "^5.12.2",
     "mongoose-autopopulate": "^0.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
@@ -138,9 +142,17 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+    "@babel/plugin-transform-react-jsx": "^7.13.12",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-typescript": "^7.13.0",
     "@compodoc/compodoc": "^1.1.11",
-    "@nestjs/testing": "^7.6.14",
+    "@nestjs/testing": "^7.6.15",
     "@types/amqplib": "^0.5.17",
+    "@types/babel__preset-env": "^7",
     "@types/bluebird": "^3.5.33",
     "@types/body-parser": "^1.19.0",
     "@types/bull": "^3.15.0",
@@ -189,8 +201,10 @@
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0",
     "@types/xml2js": "^0.4.8",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "babel-plugin-minify-dead-code-elimination": "^0.5.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^7.22.0",
     "eslint-config-alloy": "^3.10.0",
     "eslint-import-resolver-node": "^0.3.4",
