--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
   ],
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build:watch": "yarn clean && yarn tsc",
-    "build": "yarn clean && yarn tsc --emitDeclarationOnly && NODE_ENV=production yarn build:js",
-    "build:js": "babel src --out-dir dist --extensions '.ts' --source-maps",
+    "build": "yarn clean && yarn tsc",
     "dev": "node -r ts-node/register src/dev.ts",
     "dev:watch": "nodemon --exec node -r ts-node/register src/dev.ts",
     "test": "ENV=test jest",
@@ -146,7 +144,6 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
-    "@babel/plugin-transform-react-jsx": "^7.13.12",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
     "@compodoc/compodoc": "^1.1.11",
@@ -205,6 +202,7 @@
     "@typescript-eslint/parser": "^4.19.0",
     "babel-plugin-minify-dead-code-elimination": "^0.5.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^7.22.0",
     "eslint-config-alloy": "^3.10.0",
     "eslint-import-resolver-node": "^0.3.4",
