--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@danielwii/asuna-node-server",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -24,6 +24,9 @@
     "check:circular": "npx madge --circular --extensions ts ./",
     "doc": "npx @compodoc/compodoc -p tsconfig.json -s"
   },
+  "resolutions": {
+    "fsevents": "^2.3.2"
+  },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
     "@nestjs/bull": "^0.3.1",
@@ -39,10 +42,10 @@
     "@nestjs/platform-ws": "^7.6.15",
     "@nestjs/schedule": "^0.4.3",
     "@nestjs/swagger": "^4.8.0",
-    "@nestjs/terminus": "^7.1.1",
+    "@nestjs/terminus": "^7.1.2",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.15",
-    "@sentry/node": "^6.2.4",
+    "@sentry/node": "^6.2.5",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.6",
     "amqplib": "^0.7.1",
@@ -97,7 +100,7 @@
     "lru-cache": "^6.0.0",
     "lru_map": "^0.4.1",
     "luxon": "^1.26.0",
-    "mime-types": "^2.1.29",
+    "mime-types": "^2.1.30",
     "minio": "^7.0.18",
     "mongoose": "^5.12.3",
     "mongoose-autopopulate": "^0.12.3",
@@ -132,7 +135,7 @@
     "swagger-ui-express": "^4.1.6",
     "tmp": "^0.2.1",
     "typeorm": "^0.2.32",
-    "ua-parser-js": "^0.7.26",
+    "ua-parser-js": "^0.7.27",
     "uuid": "^8.3.2",
     "validator": "^13.5.2",
     "ws": "^7.4.4",
@@ -142,7 +145,7 @@
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
     "@nestjs/testing": "^7.6.15",
-    "@trivago/prettier-plugin-sort-imports": "^2.0.2",
+    "@trivago/prettier-plugin-sort-imports": "git+https://github.com/danielwii/prettier-plugin-sort-imports.git#main",
     "@types/amqplib": "^0.5.17",
     "@types/bluebird": "^3.5.33",
     "@types/body-parser": "^1.19.0",
@@ -153,11 +156,11 @@
     "@types/connect-redis": "^0.0.16",
     "@types/cookie-parser": "^1.4.2",
     "@types/cron": "^1.7.2",
-    "@types/email-templates": "^8.0.2",
+    "@types/email-templates": "^8.0.3",
     "@types/express": "4.17.11",
     "@types/express-rate-limit": "^5.1.1",
     "@types/express-session": "^1.17.3",
-    "@types/fs-extra": "^9.0.9",
+    "@types/fs-extra": "^9.0.10",
     "@types/glob": "^7.1.3",
     "@types/highland": "^2.12.12",
     "@types/jaeger-client": "^3.15.4",
@@ -165,13 +168,13 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.168",
     "@types/lru-cache": "^5.1.0",
-    "@types/luxon": "^1.26.2",
+    "@types/luxon": "^1.26.3",
     "@types/mime-types": "^2.1.0",
     "@types/minimatch": "^3.0.4",
     "@types/minio": "^7.0.7",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
-    "@types/node-fetch": "^2.5.8",
+    "@types/node-fetch": "^2.5.9",
     "@types/nodemailer": "^6.4.1",
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.5",
@@ -183,14 +186,14 @@
     "@types/redlock": "^4.0.1",
     "@types/request-ip": "^0.0.35",
     "@types/response-time": "^2.3.4",
-    "@types/sharp": "^0.27.2",
+    "@types/sharp": "^0.27.3",
     "@types/shortid": "^0.0.29",
     "@types/socket.io": "^2.1.13",
     "@types/socket.io-redis": "^1.0.27",
     "@types/supertest": "^2.0.11",
     "@types/ua-parser-js": "^0.7.35",
     "@types/uuid": "^8.3.0",
-    "@types/ws": "^7.4.0",
+    "@types/ws": "^7.4.1",
     "@types/xml2js": "^0.4.8",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
