--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   ],
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build": "yarn clean && yarn tsc",
+    "build": "yarn clean && NODE_ENV=production yarn tsc",
     "dev": "node -r ts-node/register src/dev.ts",
     "dev:watch": "nodemon --exec node -r ts-node/register src/dev.ts",
     "test": "ENV=test jest",
     "test:cov": "ENV=test jest --coverage --no-cache",
     "check:circular": "npx madge --circular --extensions ts ./",
-    "doc": "npx @compodoc/compodoc -p tsconfig.json -s"
+    "doc": "npx @compodoc/compodoc -p tsconfig.json -s",
+    "postinstall": "yarn build"
   },
   "resolutions": {
     "fsevents": "^2.3.2"
@@ -74,7 +75,7 @@
     "cron": "^1.8.2",
     "cron-parser": "^3.3.0",
     "dataloader": "^2.0.0",
-    "date-fns": "^2.20.0",
+    "date-fns": "^2.20.1",
     "dayjs": "^1.10.4",
     "elastic-apm-node": "^3.13.0",
     "email-templates": "^8.0.4",
@@ -197,7 +198,7 @@
     "@types/xml2js": "^0.4.8",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
-    "eslint": "^7.23.0",
+    "eslint": "^7.24.0",
     "eslint-config-alloy": "^3.10.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-plugin-import": "^2.22.1",
