--- a/.env.dev
+++ b/.env.dev
@@ -1,10 +1,11 @@
 LOGGER_LEVEL=debug
-# SECRET_KEY=
-DB_TYPE=sqlite
 
 APP_SYS_ADMIN_PASSWORD=password
+GRAPHQL_DEBUG=true
 
-# --- sqlite ---
+# --- db ---
+DB_TYPE=sqlite
+DB_SYNCHRONIZE=true
 TYPEORM_LOGGING=error
 TYPEORM_CONNECTION=sqlite
 TYPEORM_DATABASE=:memory:
