--- a/.github-ignore/workflows/release.yml
+++ b/.github-ignore/workflows/release.yml
@@ -1,29 +1,26 @@
-name: Node CI
+name: Node.js Release
 
-on:
-  push:
-    tags:
-      - 'v*'
+on: [push]
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x]
+
     steps:
-      - uses: actions/checkout@v1
-      - name: Setup node
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with:
-          node-version: 12.x
-      - name: Build
+          node-version: ${{ matrix.node-version }}
+          registry-url: 'https://registry.npmjs.org'
+          scope: '@danielwii'
+      - name: build
         run: |
-          yarn && yarn build --emitDeclarationOnly false
-      - uses: actions/bin/filter@master
-        if: startsWith(github.ref, 'v')
-        with:
-          args: tag v*
-      - name: Publish
-        uses: actions/npm@master
+          yarn && yarn test && yarn build
+      - run: yarn publish
         env:
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-        with:
-          args: publish
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
