--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nestjs/terminus": "^7.1.2",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.15",
+    "@prisma/client": "2.21.1",
     "@sentry/node": "^6.2.5",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.6",
@@ -209,6 +210,7 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
+    "prisma": "2.21.1",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
