chore: update lock

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@prisma/client": "2.21.1",
     "@sentry/node": "^6.2.5",
     "accesscontrol": "^2.2.1",
+    "ali-oss": "^6.15.2",
     "alipay-sdk": "^3.1.6",
     "amqplib": "^0.7.1",
     "apollo-opentracing": "^2.1.0",
@@ -148,6 +149,7 @@
     "@compodoc/compodoc": "^1.1.11",
     "@nestjs/testing": "^7.6.15",
     "@trivago/prettier-plugin-sort-imports": "git+https://github.com/danielwii/prettier-plugin-sort-imports.git#main",
+    "@types/ali-oss": "^6",
     "@types/amqplib": "^0.5.17",
     "@types/bluebird": "^3.5.33",
     "@types/body-parser": "^1.19.0",
