--- a/package.json
+++ b/package.json
@@ -31,12 +31,10 @@
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
     "@danielwii/asuna-helper": "portal:../asuna-helper",
-    "@nestjs/bull": "^0.3.1",
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/cqrs": "^7.0.1",
     "@nestjs/graphql": "^7.10.6",
-    "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
@@ -47,102 +45,59 @@
     "@nestjs/terminus": "^7.1.2",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.15",
-    "@prisma/client": "2.21.2",
     "@sentry/node": "^6.3.4",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.15.2",
     "alipay-sdk": "^3.1.6",
     "amqplib": "^0.7.1",
     "apollo-opentracing": "^2.1.0",
-    "apollo-server": "^2.23.0",
     "apollo-server-cache-redis": "^1.4.0",
-    "apollo-server-caching": "^0.6.0",
-    "apollo-server-env": "^3.0.0",
     "apollo-server-express": "^2.23.0",
     "apollo-server-plugin-response-cache": "^0.7.0",
-    "apollo-server-types": "^0.7.0",
-    "axios": "^0.21.1",
     "bluebird": "^3.7.2",
-    "body-parser": "^1.19.0",
-    "bull": "^3.22.4",
     "cache-manager": "^3.4.3",
     "cache-manager-redis-store": "^2.0.0",
     "chance": "^1.1.7",
-    "check-disk-space": "^2.1.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "common-tags": "^1.8.0",
     "compression": "^1.7.4",
     "connect-redis": "^5.2.0",
     "cookie-parser": "^1.4.5",
-    "cron": "^1.8.2",
     "cron-parser": "^3.5.0",
-    "dataloader": "^2.0.0",
     "date-fns": "^2.21.1",
     "dayjs": "^1.10.4",
     "elastic-apm-node": "^3.14.0",
     "email-templates": "^8.0.4",
-    "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
-    "file-type": "^16.3.0",
-    "fs-extra": "^9.1.0",
     "graphql": "^15.5.0",
     "graphql-type-json": "^0.3.2",
-    "handlebars": "^4.7.7",
-    "hashids": "^2.2.8",
-    "hbs": "^4.1.2",
     "helmet": "^4.5.0",
-    "highland": "^3.0.0-beta.10",
-    "iconv-lite": "^0.6.2",
-    "ismobilejs": "^1.1.1",
+    "highland": "^2.13.5",
     "jaeger-client": "^3.18.1",
-    "json5": "^2.2.0",
     "jsondiffpatch": "^0.4.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
-    "lru-cache": "^6.0.0",
     "lru_map": "^0.4.1",
-    "luxon": "^1.26.0",
-    "mime-types": "^2.1.30",
     "minio": "^7.0.18",
-    "mongoose": "^5.12.6",
-    "mongoose-autopopulate": "^0.13.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "mysql2": "^2.2.5",
+    "mongoose": "^5.12.7",
     "node-buffs": "^0.8.12",
-    "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.0",
     "opentracing": "^0.14.5",
     "otplib": "^12.0.1",
     "ow": "^0.23.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-strategy": "^1.0.0",
-    "pump": "^3.0.0",
     "qiniu": "^7.3.2",
-    "qrcode": "^1.4.4",
-    "qs": "^6.10.1",
     "ramda": "^0.27.1",
     "raw-body": "^2.4.1",
-    "redis": "^3.1.2",
     "redis-dataloader": "^1.0.2",
-    "redlock": "^4.2.0",
-    "reflect-metadata": "^0.1.13",
     "request-ip": "^2.1.3",
     "response-time": "^2.3.2",
     "rxjs": "^6.6.7",
     "sharp": "^0.28.1",
     "shortid": "^2.2.16",
-    "socket.io-redis": "^5.4.0",
-    "swagger-ui-express": "^4.1.6",
-    "tmp": "^0.2.1",
+    "socket.io-redis": "^6.1.0",
     "typeorm": "^0.2.32",
-    "ua-parser-js": "^0.7.28",
-    "uuid": "^8.3.2",
-    "validator": "^13.6.0",
-    "ws": "^7.4.5",
     "xlsx": "^0.16.9",
     "xml2js": "^0.4.23"
   },
@@ -150,56 +105,33 @@
     "@compodoc/compodoc": "^1.1.11",
     "@nestjs/testing": "^7.6.15",
     "@trivago/prettier-plugin-sort-imports": "git+https://github.com/danielwii/prettier-plugin-sort-imports.git#main",
-    "@types/ali-oss": "^6.0.8",
-    "@types/amqplib": "^0.5.17",
-    "@types/bluebird": "^3.5.33",
-    "@types/body-parser": "^1.19.0",
-    "@types/bull": "^3.15.1",
-    "@types/chance": "^1.1.1",
-    "@types/common-tags": "^1.8.0",
-    "@types/compression": "^1.7.0",
+    "@types/ali-oss": "^6",
+    "@types/amqplib": "^0",
+    "@types/bluebird": "^3",
+    "@types/cache-manager": "^3",
+    "@types/chance": "^1",
+    "@types/common-tags": "^1",
+    "@types/compression": "^1",
     "@types/connect-redis": "^0.0.16",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cron": "^1.7.2",
-    "@types/email-templates": "^8.0.3",
-    "@types/express": "4.17.11",
-    "@types/express-rate-limit": "^5.1.1",
-    "@types/express-session": "^1.17.3",
-    "@types/fs-extra": "^9.0.11",
-    "@types/glob": "^7.1.3",
-    "@types/highland": "^2.12.12",
-    "@types/jaeger-client": "^3.18.0",
-    "@types/jest": "^26.0.23",
-    "@types/jsonwebtoken": "^8.5.1",
-    "@types/lodash": "^4.14.168",
-    "@types/lru-cache": "^5.1.0",
-    "@types/luxon": "^1.26.5",
-    "@types/mime-types": "^2.1.0",
-    "@types/minimatch": "^3.0.4",
-    "@types/minio": "^7.0.7",
+    "@types/cookie-parser": "^1",
+    "@types/email-templates": "^8",
+    "@types/express-rate-limit": "^5",
+    "@types/express-session": "^1",
+    "@types/highland": "^2",
+    "@types/jaeger-client": "^3",
+    "@types/minio": "^7",
+    "@types/mongoose": "^5",
     "@types/morgan": "^1.9.2",
-    "@types/multer": "^1.4.5",
-    "@types/node-fetch": "^2.5.10",
-    "@types/nodemailer": "^6.4.1",
-    "@types/passport": "^1.0.6",
+    "@types/nodemailer": "^6",
+    "@types/passport": "^0",
     "@types/passport-jwt": "^3.0.5",
-    "@types/passport-strategy": "^0.2.35",
-    "@types/pump": "^1.1.1",
-    "@types/qs": "^6.9.6",
-    "@types/ramda": "^0.27.40",
-    "@types/redis": "^2.8.28",
-    "@types/redlock": "^4.0.1",
+    "@types/ramda": "^0",
     "@types/request-ip": "^0.0.35",
-    "@types/response-time": "^2.3.4",
-    "@types/sharp": "^0.28.0",
+    "@types/response-time": "^2",
+    "@types/sharp": "^0",
     "@types/shortid": "^0.0.29",
-    "@types/socket.io": "^2.1.13",
-    "@types/socket.io-redis": "^1.0.27",
-    "@types/supertest": "^2.0.11",
     "@types/ua-parser-js": "^0.7.35",
-    "@types/uuid": "^8.3.0",
-    "@types/ws": "^7.4.2",
-    "@types/xml2js": "^0.4.8",
+    "@types/xml2js": "^0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
