--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "connect-redis": "^5.2.0",
     "cookie-parser": "^1.4.5",
     "cron-parser": "^3.5.0",
-    "date-fns": "^2.21.1",
+    "date-fns": "^2.21.2",
     "dayjs": "^1.10.4",
     "elastic-apm-node": "^3.14.0",
     "email-templates": "^8.0.4",
@@ -131,24 +131,24 @@
     "@types/shortid": "^0.0.29",
     "@types/ua-parser-js": "^0.7.35",
     "@types/xml2js": "^0",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint": "^7.25.0",
-    "eslint-config-alloy": "^4.1.0",
-    "eslint-import-resolver-node": "^0.3.4",
-    "eslint-plugin-import": "^2.22.1",
+    "@typescript-eslint/eslint-plugin": "^4",
+    "@typescript-eslint/parser": "^4",
+    "eslint": "^7",
+    "eslint-config-alloy": "^4",
+    "eslint-import-resolver-node": "^0",
+    "eslint-plugin-import": "^2",
     "glob": "^7.1.6",
-    "husky": "^6.0.0",
+    "husky": "^6",
     "jest": "^26.6.3",
     "minimatch": "^3.0.4",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
-    "prisma": "2.21.2",
+    "nodemon": "^2",
+    "prettier": "^2",
+    "pretty-quick": "^3",
+    "prisma": "^2.22.0",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.5",
-    "ts-node": "^9.1.1",
+    "ts-jest": "^26",
+    "ts-node": "^9",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
   },
