chore: update lock

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "ENV=test jest",
     "test:cov": "ENV=test jest --coverage --no-cache",
     "check:circular": "npx madge --circular --extensions ts ./",
-    "doc": "npx @compodoc/compodoc -p tsconfig.json -s",
+    "doc": "compodoc -p tsconfig.json -s",
     "postinstall!": "yarn build"
   },
   "resolutions": {
@@ -45,7 +45,7 @@
     "@nestjs/terminus": "^7.1.2",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.15",
-    "@sentry/node": "^6.3.5",
+    "@sentry/node": "^6",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.15.2",
     "alipay-sdk": "^3.1.6",
@@ -65,7 +65,7 @@
     "connect-redis": "^5.2.0",
     "cookie-parser": "^1.4.5",
     "cron-parser": "^3.5.0",
-    "date-fns": "^2.21.2",
+    "date-fns": "^2.21.3",
     "dayjs": "^1.10.4",
     "elastic-apm-node": "^3.14.0",
     "email-templates": "^8.0.4",
@@ -79,9 +79,9 @@
     "jsondiffpatch": "^0.4.1",
     "lru_map": "^0.4.1",
     "minio": "^7.0.18",
-    "mongoose": "^5.12.7",
+    "mongoose": "^5.12.8",
     "morgan": "^1.10.0",
-    "node-buffs": "^0.8.12",
+    "node-buffs": "^0.8.13",
     "nodemailer": "^6.6.0",
     "opentracing": "^0.14.5",
     "otplib": "^12.0.1",
@@ -94,7 +94,7 @@
     "redis-dataloader": "^1.0.2",
     "response-time": "^2.3.2",
     "rxjs": "^7.0.0",
-    "sharp": "^0.28.1",
+    "sharp": "^0.28.2",
     "shortid": "^2.2.16",
     "socket.io-redis": "^6.1.0",
     "typeorm": "^0.2.32",
@@ -102,8 +102,8 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@compodoc/compodoc": "^1.1.11",
-    "@nestjs/testing": "^7.6.15",
+    "@compodoc/compodoc": "^1",
+    "@nestjs/testing": "^7",
     "@trivago/prettier-plugin-sort-imports": "git+https://github.com/danielwii/prettier-plugin-sort-imports.git#main",
     "@types/ali-oss": "^6",
     "@types/amqplib": "^0",
@@ -112,7 +112,7 @@
     "@types/chance": "^1",
     "@types/common-tags": "^1",
     "@types/compression": "^1",
-    "@types/connect-redis": "^0.0.16",
+    "@types/connect-redis": "^0",
     "@types/cookie-parser": "^1",
     "@types/email-templates": "^8",
     "@types/express-rate-limit": "^5",
@@ -121,15 +121,15 @@
     "@types/jaeger-client": "^3",
     "@types/minio": "^7",
     "@types/mongoose": "^5",
-    "@types/morgan": "^1.9.2",
+    "@types/morgan": "^1",
     "@types/nodemailer": "^6",
     "@types/passport": "^1",
-    "@types/passport-jwt": "^3.0.5",
+    "@types/passport-jwt": "^3",
     "@types/ramda": "^0",
     "@types/response-time": "^2",
     "@types/sharp": "^0",
-    "@types/shortid": "^0.0.29",
-    "@types/ua-parser-js": "^0.7.35",
+    "@types/shortid": "^0",
+    "@types/ua-parser-js": "^0",
     "@types/xml2js": "^0",
     "@typescript-eslint/eslint-plugin": "^4",
     "@typescript-eslint/parser": "^4",
@@ -137,19 +137,19 @@
     "eslint-config-alloy": "^4",
     "eslint-import-resolver-node": "^0",
     "eslint-plugin-import": "^2",
-    "glob": "^7.1.6",
+    "glob": "^7",
     "husky": "^6",
-    "jest": "^26.6.3",
-    "minimatch": "^3.0.4",
+    "jest": "^26",
+    "minimatch": "^3",
     "nodemon": "^2",
     "prettier": "^2",
     "pretty-quick": "^3",
-    "prisma": "^2.22.0",
-    "sqlite3": "^5.0.2",
-    "supertest": "^6.1.3",
+    "prisma": "^2.22.1",
+    "sqlite3": "^5",
+    "supertest": "^6",
     "ts-jest": "^26",
     "ts-node": "^9",
-    "tslib": "^2.2.0",
+    "tslib": "^2",
     "typescript": "^4.2.4"
   },
   "nodemonConfig": {
