--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "minio": "^7.0.18",
     "mongoose": "^5.12.8",
     "morgan": "^1.10.0",
-    "node-buffs": "^0.8.13",
+    "node-buffs": "^0",
     "nodemailer": "^6.6.0",
     "opentracing": "^0.14.5",
     "otplib": "^12.0.1",
@@ -119,6 +119,7 @@
     "@types/express-session": "^1",
     "@types/highland": "^2",
     "@types/jaeger-client": "^3",
+    "@types/jest": "^26",
     "@types/minio": "^7",
     "@types/mongoose": "^5",
     "@types/morgan": "^1",
