--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "test": "ENV=test jest",
     "test:cov": "ENV=test jest --coverage --no-cache",
     "check:circular": "npx madge --circular --extensions ts ./",
-    "doc": "compodoc -p tsconfig.json -s",
+    "doc": "yarn dlx compodoc -p tsconfig.json -s",
     "postinstall!": "yarn build"
   },
   "resolutions": {
-    "fsevents": "^2.3.2"
+    "node-pre-gyp": "https://github.com/mapbox/node-pre-gyp/archive/refs/tags/v1.0.5.tar.gz",
+    "fsevents": "^2"
   },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
@@ -42,7 +43,7 @@
     "@nestjs/platform-ws": "^7.6.15",
     "@nestjs/schedule": "^0.4.3",
     "@nestjs/swagger": "^4.8.0",
-    "@nestjs/terminus": "^7.1.2",
+    "@nestjs/terminus": "^7.2.0",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.15",
     "@sentry/node": "^6",
@@ -71,15 +72,18 @@
     "email-templates": "^8.0.4",
     "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
+    "fs-extra": "^10.0.0",
     "graphql": "^15.5.0",
     "graphql-type-json": "^0.3.2",
+    "handlebars": "^4.7.7",
     "helmet": "^4.6.0",
     "highland": "^2.13.5",
     "jaeger-client": "^3.18.1",
     "jsondiffpatch": "^0.4.1",
     "lru_map": "^0.4.1",
+    "luxon": "^1.27.0",
     "minio": "^7.0.18",
-    "mongoose": "^5.12.8",
+    "mongoose": "^5.12.9",
     "morgan": "^1.10.0",
     "node-buffs": "^0",
     "nodemailer": "^6.6.0",
@@ -88,21 +92,21 @@
     "ow": "^0.23.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "pump": "^3.0.0",
     "qiniu": "^7.3.2",
     "ramda": "^0.27.1",
     "raw-body": "^2.4.1",
     "redis-dataloader": "^1.0.2",
     "response-time": "^2.3.2",
-    "rxjs": "^7.0.0",
+    "rxjs": "^7.0.1",
     "sharp": "^0.28.2",
     "shortid": "^2.2.16",
     "socket.io-redis": "^6.1.0",
     "typeorm": "^0.2.32",
-    "xlsx": "^0.16.9",
+    "xlsx": "^0.17.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@compodoc/compodoc": "^1",
     "@nestjs/testing": "^7",
     "@trivago/prettier-plugin-sort-imports": "git+https://github.com/danielwii/prettier-plugin-sort-imports.git#main",
     "@types/ali-oss": "^6",
@@ -114,23 +118,31 @@
     "@types/compression": "^1",
     "@types/connect-redis": "^0",
     "@types/cookie-parser": "^1",
+    "@types/cron": "^1",
     "@types/email-templates": "^8",
     "@types/express-rate-limit": "^5",
     "@types/express-session": "^1",
+    "@types/fs-extra": "^9",
+    "@types/glob": "^7",
     "@types/highland": "^2",
     "@types/jaeger-client": "^3",
     "@types/jest": "^26",
+    "@types/luxon": "^1",
+    "@types/mime-types": "^2",
     "@types/minio": "^7",
     "@types/mongoose": "^5",
     "@types/morgan": "^1",
+    "@types/multer": "^1",
     "@types/nodemailer": "^6",
     "@types/passport": "^1",
     "@types/passport-jwt": "^3",
+    "@types/pump": "^1",
     "@types/ramda": "^0",
     "@types/response-time": "^2",
     "@types/sharp": "^0",
     "@types/shortid": "^0",
     "@types/ua-parser-js": "^0",
+    "@types/uuid": "^8",
     "@types/xml2js": "^0",
     "@typescript-eslint/eslint-plugin": "^4",
     "@typescript-eslint/parser": "^4",
@@ -145,7 +157,7 @@
     "nodemon": "^2",
     "prettier": "^2",
     "pretty-quick": "^3",
-    "prisma": "^2.22.1",
+    "prisma": "^2",
     "sqlite3": "^5",
     "supertest": "^6",
     "ts-jest": "^26",
