--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "apollo-server-express": "^2.25.1",
     "apollo-server-plugin-response-cache": "^0.9.0",
     "bluebird": "^3.7.2",
+    "blurhash": "^1.1.3",
     "cache-manager": "^3.4.4",
     "cache-manager-redis-store": "^2.0.0",
     "chance": "^1.1.7",
@@ -68,7 +69,7 @@
     "cron-parser": "^3.5.0",
     "date-fns": "^2.22.1",
     "dayjs": "^1.10.5",
-    "elastic-apm-node": "^3.15.0",
+    "elastic-apm-node": "^3",
     "email-templates": "^8.0.7",
     "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.2",
@@ -83,7 +84,7 @@
     "lru_map": "^0.4.1",
     "luxon": "^1.27.0",
     "minio": "^7.0.18",
-    "mongoose": "^5.12.13",
+    "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
     "node-buffs": "^0",
     "nodemailer": "^6.6.1",
