chore: upgrade nest to 8

--- a/.env.base
+++ b/.env.base
@@ -1,8 +1,8 @@
 # --------------------------------------------------------------
 # Core
 # --------------------------------------------------------------
-
-LOGGER_LEVEL=info
+NO_COLOR=
+LOGGER_LEVEL=log
 SECRET_KEY=
 PORT=5000
 
