--- a/package.json
+++ b/package.json
@@ -31,21 +31,21 @@
   },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
-    "@danielwii/asuna-helper": "portal:../asuna-helper",
-    "@nestjs/common": "^7.6.18",
-    "@nestjs/core": "^7.6.18",
-    "@nestjs/cqrs": "^7.0.1",
-    "@nestjs/graphql": "^7.11.0",
-    "@nestjs/mongoose": "^7.2.4",
-    "@nestjs/passport": "^7.1.6",
-    "@nestjs/platform-express": "^7.6.18",
-    "@nestjs/platform-socket.io": "^7.6.18",
-    "@nestjs/platform-ws": "^7.6.18",
-    "@nestjs/schedule": "^0.4.3",
-    "@nestjs/swagger": "^4.8.2",
+    "@danielwii/asuna-helper": "link:../asuna-helper",
+    "@nestjs/common": "^8.0.1",
+    "@nestjs/core": "^8.0.1",
+    "@nestjs/cqrs": "^8.0.0",
+    "@nestjs/graphql": "^8.0.2",
+    "@nestjs/mongoose": "^8.0.0",
+    "@nestjs/passport": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.1",
+    "@nestjs/platform-socket.io": "^8.0.1",
+    "@nestjs/platform-ws": "^8.0.1",
+    "@nestjs/schedule": "^1.0.0",
+    "@nestjs/swagger": "^5.0.0",
     "@nestjs/terminus": "^7.2.0",
-    "@nestjs/typeorm": "^7.1.5",
-    "@nestjs/websockets": "^7.6.18",
+    "@nestjs/typeorm": "^8.0.1",
+    "@nestjs/websockets": "^8.0.1",
     "@sentry/node": "^6.8.0",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.15.2",
@@ -68,10 +68,10 @@
     "cookie-parser": "^1.4.5",
     "cron-parser": "^3.5.0",
     "date-fns": "^2.22.1",
-    "dayjs": "^1.10.5",
-    "elastic-apm-node": "^3.16.0",
+    "dayjs": "^1.10.6",
+    "elastic-apm-node": "^3.17.0",
     "email-templates": "^8.0.7",
-    "express-rate-limit": "^5.2.6",
+    "express-rate-limit": "^5.3.0",
     "express-session": "^1.17.2",
     "fs-extra": "^10.0.0",
     "graphql": "^15.5.1",
@@ -82,24 +82,24 @@
     "jaeger-client": "^3.18.1",
     "jsondiffpatch": "^0.4.1",
     "lru_map": "^0.4.1",
-    "luxon": "^1.27.0",
+    "luxon": "^1.28.0",
     "minio": "^7.0.18",
-    "mongoose": "^5.13.0",
+    "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
-    "node-buffs": "^0.8.16",
+    "node-buffs": "^0.8.17",
     "nodemailer": "^6.6.2",
     "opentracing": "^0.14.5",
     "otplib": "^12.0.1",
-    "ow": "^0.25.0",
+    "ow": "^0.26.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pump": "^3.0.0",
-    "qiniu": "^7.3.3",
+    "qiniu": "^7.4.0",
     "ramda": "^0.27.1",
     "raw-body": "^2.4.1",
     "redis-dataloader": "^1.0.2",
     "response-time": "^2.3.2",
-    "rxjs": "^7.1.0",
+    "rxjs": "^7.2.0",
     "sharp": "^0.28.3",
     "shortid": "^2.2.16",
     "socket.io-redis": "^6.1.1",
@@ -108,8 +108,9 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@nestjs/testing": "^7.6.18",
-    "@trivago/prettier-plugin-sort-imports": "git+https://github.com/danielwii/prettier-plugin-sort-imports.git#main",
+    "@nestjs/cli": "^8.0.2",
+    "@nestjs/testing": "^8.0.1",
+    "@trivago/prettier-plugin-sort-imports": "patch:@trivago/prettier-plugin-sort-imports@2.0.2#.yarn/patches/prettier-patch.diff",
     "@types/ali-oss": "^6",
     "@types/amqplib": "^0",
     "@types/bluebird": "^3",
@@ -134,6 +135,8 @@
     "@types/mongoose": "^5",
     "@types/morgan": "^1",
     "@types/multer": "^1",
+    "@types/node": "^14",
+    "@types/node-fetch": "^2",
     "@types/nodemailer": "^6",
     "@types/passport": "^1",
     "@types/passport-jwt": "^3",
@@ -145,24 +148,24 @@
     "@types/ua-parser-js": "^0",
     "@types/uuid": "^8",
     "@types/xml2js": "^0",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
-    "eslint": "^7.29.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
     "eslint-config-alloy": "^4.1.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-plugin-import": "^2.23.4",
     "glob": "^7.1.7",
-    "husky": "^7.0.0",
+    "husky": "^7.0.1",
     "jest": "^27.0.6",
     "minimatch": "^3.0.4",
-    "nodemon": "^2.0.9",
+    "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "prisma": "^2.26.0",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.1.0",
     "tslib": "^2.3.0",
     "typescript": "^4.3.5"
   },
