--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@nestjs/websockets": "^8.0.1",
     "@sentry/node": "^6.8.0",
     "accesscontrol": "^2.2.1",
-    "ali-oss": "^6.15.2",
+    "ali-oss": "^6.16.0",
     "alipay-sdk": "^3.1.6",
     "amqplib": "^0.8.0",
     "apollo-opentracing": "^2.1.0",
@@ -75,6 +75,7 @@
     "express-session": "^1.17.2",
     "fs-extra": "^10.0.0",
     "graphql": "^15.5.1",
+    "graphql-tools": "^7.0.5",
     "graphql-type-json": "^0.3.2",
     "handlebars": "^4.7.7",
     "helmet": "^4.6.0",
@@ -82,7 +83,7 @@
     "jaeger-client": "^3.18.1",
     "jsondiffpatch": "^0.4.1",
     "lru_map": "^0.4.1",
-    "luxon": "^1.28.0",
+    "luxon": "^2.0.1",
     "minio": "^7.0.18",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
@@ -115,6 +116,7 @@
     "@types/amqplib": "^0",
     "@types/bluebird": "^3",
     "@types/cache-manager": "^3",
+    "@types/cache-manager-redis-store": "^2",
     "@types/chance": "^1",
     "@types/common-tags": "^1",
     "@types/compression": "^1",
@@ -165,6 +167,7 @@
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
+    "ts-morph": "^11.0.3",
     "ts-node": "^10.1.0",
     "tslib": "^2.3.0",
     "typescript": "^4.3.5"
