--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
-    "@danielwii/asuna-helper": "link:../asuna-helper",
+    "@danielwii/asuna-helper": "portal:../asuna-helper",
     "@nestjs/common": "^8.0.4",
     "@nestjs/core": "^8.0.4",
     "@nestjs/cqrs": "^8.0.0",
@@ -42,16 +42,16 @@
     "@nestjs/platform-socket.io": "^8.0.4",
     "@nestjs/platform-ws": "^8.0.4",
     "@nestjs/schedule": "^1.0.0",
-    "@nestjs/swagger": "^5.0.4",
+    "@nestjs/swagger": "^5.0.8",
     "@nestjs/terminus": "^7.2.0",
     "@nestjs/typeorm": "^8.0.1",
     "@nestjs/websockets": "^8.0.4",
-    "@sentry/node": "^6.9.0",
+    "@sentry/node": "^6.10.0",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.16.0",
     "alipay-sdk": "^3.1.6",
     "amqplib": "^0.8.0",
-    "apollo-opentracing": "^2.1.14",
+    "apollo-opentracing": "^2.1.15",
     "apollo-server-cache-redis": "^1.5.0",
     "apollo-server-express": "^2.25.2",
     "apollo-server-plugin-response-cache": "^0.9.0",
@@ -67,9 +67,9 @@
     "connect-redis": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "cron-parser": "^3.5.0",
-    "date-fns": "^2.22.1",
+    "date-fns": "^2.23.0",
     "dayjs": "^1.10.6",
-    "elastic-apm-node": "^3.17.0",
+    "elastic-apm-node": "^3.18.0",
     "email-templates": "^8.0.7",
     "express-rate-limit": "^5.3.0",
     "express-session": "^1.17.2",
@@ -150,8 +150,8 @@
     "@types/ua-parser-js": "^0",
     "@types/uuid": "^8",
     "@types/xml2js": "^0",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "eslint": "^7.31.0",
     "eslint-config-alloy": "^4.1.0",
     "eslint-import-resolver-node": "^0.3.4",
@@ -165,8 +165,8 @@
     "pretty-quick": "^3.1.1",
     "prisma": "^2.27.0",
     "sqlite3": "^5.0.2",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
+    "supertest": "^6.1.4",
+    "ts-jest": "^27.0.4",
     "ts-morph": "^11.0.3",
     "ts-node": "^10.1.0",
     "tslib": "^2.3.0",
