feat: add org auth handler

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@nestjs/platform-socket.io": "^8.0.5",
     "@nestjs/platform-ws": "^8.0.5",
     "@nestjs/schedule": "^1.0.1",
-    "@nestjs/swagger": "^5.0.8",
+    "@nestjs/swagger": "^5.0.9",
     "@nestjs/terminus": "^7.2.0",
     "@nestjs/typeorm": "^8.0.1",
     "@nestjs/websockets": "^8.0.5",
@@ -100,6 +100,7 @@
     "raw-body": "^2.4.1",
     "redis-dataloader": "^1.0.2",
     "response-time": "^2.3.2",
+    "rxjs": "^7.3.0",
     "sharp": "^0.28.3",
     "shortid": "^2.2.16",
     "socket.io-redis": "^6.1.1",
