refactor: sentry capture

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,8 @@
     // Import non-ES modules as default imports.
     "esModuleInterop": true,
     "skipLibCheck": true,
-    //    "sourceMap": true,
-    "inlineSourceMap": true,
+    "sourceMap": true,
+    //    "inlineSourceMap": true,
     "inlineSources": true,
     "declaration": true,
     "allowSyntheticDefaultImports": true,
