--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build": "yarn clean && NODE_ENV=production yarn tsc",
+    "build": "yarn clean && yarn tsc",
     "dev": "node -r ts-node/register src/dev.ts",
     "dev:watch": "nodemon --exec node -r ts-node/register src/dev.ts",
     "test": "ENV=test jest",
@@ -32,26 +32,26 @@
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
     "@danielwii/asuna-helper": "portal:../asuna-helper",
-    "@nestjs/common": "^8.0.5",
-    "@nestjs/core": "^8.0.5",
+    "@nestjs/common": "^8.0.6",
+    "@nestjs/core": "^8.0.6",
     "@nestjs/cqrs": "^8.0.0",
     "@nestjs/graphql": "^8.0.2",
     "@nestjs/mongoose": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^8.0.5",
-    "@nestjs/platform-socket.io": "^8.0.5",
-    "@nestjs/platform-ws": "^8.0.5",
+    "@nestjs/platform-express": "^8.0.6",
+    "@nestjs/platform-socket.io": "^8.0.6",
+    "@nestjs/platform-ws": "^8.0.6",
     "@nestjs/schedule": "^1.0.1",
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/terminus": "^7.2.0",
     "@nestjs/typeorm": "^8.0.2",
-    "@nestjs/websockets": "^8.0.5",
+    "@nestjs/websockets": "^8.0.6",
     "@sentry/node": "^6.10.0",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.16.0",
     "alipay-sdk": "^3.1.6",
     "amqplib": "^0.8.0",
-    "apollo-opentracing": "^2.1.18",
+    "apollo-opentracing": "^2.1.19",
     "apollo-server-cache-redis": "^1.5.0",
     "apollo-server-express": "^2.25.2",
     "apollo-server-plugin-response-cache": "^0.9.0",
@@ -69,7 +69,7 @@
     "cron-parser": "^3.5.0",
     "date-fns": "^2.23.0",
     "dayjs": "^1.10.6",
-    "elastic-apm-node": "^3.18.0",
+    "elastic-apm-node": "^3.19.0",
     "email-templates": "^8.0.7",
     "express-rate-limit": "^5.3.0",
     "express-session": "^1.17.2",
@@ -110,7 +110,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.1",
-    "@nestjs/testing": "^8.0.5",
+    "@nestjs/testing": "^8.0.6",
     "@trivago/prettier-plugin-sort-imports": "patch:@trivago/prettier-plugin-sort-imports@2.0.2#.yarn/patches/prettier-patch.diff",
     "@types/ali-oss": "^6",
     "@types/amqplib": "^0",
