feat: add mongoose support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,18 @@
 {
+  "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
-    // Target latest version of ECMAScript.
-    "module": "CommonJS",
-    "target": "ES2017",
-    // Search under node_modules for non-relative imports.
     "moduleResolution": "node",
-    // Enable strictest settings like strictNullChecks & noImplicitAny. :P
     "strict": false,
-    // Disallow features that require cross-file information for emit.
-    //"isolatedModules": true,
-    // Import non-ES modules as default imports.
-    "esModuleInterop": true,
-    "skipLibCheck": true,
     "sourceMap": true,
-    //    "inlineSourceMap": true,
     "inlineSources": true,
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "incremental": true,
-    "composite": true,
     "allowJs": true,
     "rootDir": "src",
     "outDir": "./dist"
   },
-  "include": ["src/**/*.*"],
+  "include": ["src/**/*"],
   "exclude": ["**/node_modules/*", "**/*.spec.ts", "./dist"]
 }
