--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "luxon": "^2.0.2",
     "minio": "^7.0.18",
     "mongoose": "^5.13.7",
+    "mongoose-autopopulate": "^0.14.0",
     "morgan": "^1.10.0",
     "node-buffs": "^0.8.17",
     "nodemailer": "^6.6.3",
@@ -112,6 +113,7 @@
     "@nestjs/cli": "^8.1.1",
     "@nestjs/testing": "^8.0.6",
     "@trivago/prettier-plugin-sort-imports": "patch:@trivago/prettier-plugin-sort-imports@2.0.2#.yarn/patches/prettier-patch.diff",
+    "@tsconfig/node14": "^1.0.1",
     "@types/ali-oss": "^6",
     "@types/amqplib": "^0",
     "@types/bluebird": "^3",
@@ -130,11 +132,12 @@
     "@types/glob": "^7",
     "@types/highland": "^2",
     "@types/jaeger-client": "^3",
-    "@types/jest": "^27.0.0",
-    "@types/luxon": "^2.0.0",
+    "@types/jest": "^27",
+    "@types/luxon": "^2",
     "@types/mime-types": "^2",
     "@types/minio": "^7",
     "@types/mongoose": "^5",
+    "@types/mongoose-autopopulate": "^0",
     "@types/morgan": "^1",
     "@types/multer": "^1",
     "@types/node": "^14",
@@ -152,6 +155,7 @@
     "@types/xml2js": "^0",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
+    "builder-pattern": "^1.3.0",
     "eslint": "^7.32.0",
     "eslint-config-alloy": "^4.2.0",
     "eslint-import-resolver-node": "^0.3.5",
