--- a/package.json
+++ b/package.json
@@ -74,8 +74,9 @@
     "express-rate-limit": "^5.3.0",
     "express-session": "^1.17.2",
     "fs-extra": "^10.0.0",
+    "geoip-lite": "^1.4.2",
     "graphql": "^15.5.1",
-    "graphql-tools": "^7.0.5",
+    "graphql-tools": "^8.1.0",
     "graphql-type-json": "^0.3.2",
     "handlebars": "^4.7.7",
     "helmet": "^4.6.0",
@@ -129,6 +130,7 @@
     "@types/express-rate-limit": "^5",
     "@types/express-session": "^1",
     "@types/fs-extra": "^9",
+    "@types/geoip-lite": "^1",
     "@types/glob": "^7",
     "@types/highland": "^2",
     "@types/jaeger-client": "^3",
@@ -158,7 +160,7 @@
     "builder-pattern": "^1.3.0",
     "eslint": "^7.32.0",
     "eslint-config-alloy": "^4.2.0",
-    "eslint-import-resolver-node": "^0.3.5",
+    "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.24.0",
     "glob": "^7.1.7",
     "husky": "^7.0.1",
