feat: add create staff api for tenant module

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@alicloud/pop-core": "^1.7.10",
     "@danielwii/asuna-helper": "portal:../asuna-helper",
+    "@danielwii/asuna-shared": "portal:../asuna-shared",
     "@nestjs/common": "^8.0.6",
     "@nestjs/core": "^8.0.6",
     "@nestjs/cqrs": "^8.0.0",
@@ -46,12 +47,12 @@
     "@nestjs/terminus": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "@nestjs/websockets": "^8.0.6",
-    "@sentry/node": "^6.11.0",
+    "@sentry/node": "^6.12.0",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.16.0",
     "alipay-sdk": "^3.1.6",
     "amqplib": "^0.8.0",
-    "apollo-opentracing": "^2.1.28",
+    "apollo-opentracing": "^2.1.30",
     "apollo-server-cache-redis": "^3.1.0",
     "apollo-server-express": "^3.3.0",
     "apollo-server-plugin-response-cache": "^3.2.0",
@@ -77,7 +78,7 @@
     "geoip-lite": "^1.4.2",
     "graphql": "^15.5.2",
     "graphql-scalars": "^1.10.0",
-    "graphql-tools": "^8.1.0",
+    "graphql-tools": "^8.2.0",
     "graphql-type-json": "^0.3.2",
     "handlebars": "^4.7.7",
     "helmet": "^4.6.0",
