refactor: using redis v4

--- a/package.json
+++ b/package.json
@@ -33,30 +33,31 @@
     "@alicloud/pop-core": "^1.7.10",
     "@danielwii/asuna-helper": "^0.0.17",
     "@danielwii/asuna-shared": "^0.0.5",
-    "@nestjs/common": "^8.2.5",
-    "@nestjs/core": "^8.2.5",
+    "@nestjs/apollo": "^10.0.0",
+    "@nestjs/common": "^8.2.6",
+    "@nestjs/core": "^8.2.6",
     "@nestjs/cqrs": "^8.0.1",
-    "@nestjs/graphql": "^9.1.2",
+    "@nestjs/graphql": "^10.0.0",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^8.1.0",
-    "@nestjs/platform-express": "^8.2.5",
-    "@nestjs/platform-socket.io": "^8.2.5",
-    "@nestjs/platform-ws": "^8.2.5",
+    "@nestjs/platform-express": "^8.2.6",
+    "@nestjs/platform-socket.io": "^8.2.6",
+    "@nestjs/platform-ws": "^8.2.6",
     "@nestjs/schedule": "^1.0.2",
-    "@nestjs/swagger": "^5.1.5",
-    "@nestjs/terminus": "^8.0.3",
-    "@nestjs/typeorm": "^8.0.2",
-    "@nestjs/websockets": "^8.2.5",
-    "@prisma/client": "3.8.0",
-    "@sentry/node": "^6.16.1",
+    "@nestjs/swagger": "^5.2.0",
+    "@nestjs/terminus": "^8.0.4",
+    "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/websockets": "^8.2.6",
+    "@prisma/client": "3.9.2",
+    "@sentry/node": "^6.17.6",
     "accesscontrol": "^2.2.1",
-    "ali-oss": "^6.16.0",
+    "ali-oss": "^6.17.1",
     "alipay-sdk": "^3.2.0",
     "amqplib": "^0.8.0",
     "apollo-opentracing": "^2.1.72",
-    "apollo-server-cache-redis": "^3.3.0",
-    "apollo-server-express": "^3.6.1",
-    "apollo-server-plugin-response-cache": "^3.5.0",
+    "apollo-server-cache-redis": "^3.3.1",
+    "apollo-server-express": "^3.6.3",
+    "apollo-server-plugin-response-cache": "^3.5.1",
     "bluebird": "^3.7.2",
     "blurhash": "^1.1.4",
     "cache-manager": "^3.6.0",
@@ -66,14 +67,14 @@
     "class-validator": "^0.13.2",
     "common-tags": "^1.8.2",
     "compression": "^1.7.4",
-    "connect-redis": "^6.0.0",
+    "connect-redis": "^6.1.1",
     "cookie-parser": "^1.4.6",
     "cron-parser": "^4.2.1",
     "date-fns": "^2.28.0",
     "dayjs": "^1.10.7",
-    "elastic-apm-node": "^3.26.0",
+    "elastic-apm-node": "^3.28.0",
     "email-templates": "^8.0.8",
-    "express-rate-limit": "^6.1.0",
+    "express-rate-limit": "^6.2.1",
     "express-session": "^1.17.2",
     "fix-esm": "^1.0.1",
     "fs-extra": "^10.0.0",
@@ -83,7 +84,7 @@
     "graphql-tools": "^8.2.0",
     "graphql-type-json": "^0.3.2",
     "handlebars": "^4.7.7",
-    "helmet": "^5.0.1",
+    "helmet": "^5.0.2",
     "highland": "^2.13.5",
     "jaeger-client": "^3.19.0",
     "jsondiffpatch": "^0.4.1",
@@ -91,11 +92,11 @@
     "lru_map": "^0.4.1",
     "luxon": "^2.3.0",
     "minio": "^7.0.26",
-    "mongoose": "^6.1.6",
+    "mongoose": "^6.2.1",
     "mongoose-autopopulate": "^0.16.0",
     "morgan": "^1.10.0",
-    "node-buffs": "^0.8.17",
-    "node-fetch": "^3.1.0",
+    "node-buffs": "^0.8.18",
+    "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.2",
     "opentracing": "^0.14.7",
     "otplib": "^12.0.1",
@@ -106,21 +107,21 @@
     "qiniu": "^7.4.0",
     "ramda": "^0.27.2",
     "raw-body": "^2.4.2",
-    "redis": "^4.0.1",
+    "redis": "^4.0.3",
     "redis-dataloader": "^1.0.2",
     "regenerator-runtime": "^0.13.9",
     "response-time": "^2.3.2",
-    "rxjs": "^7.5.2",
-    "sharp": "^0.29.3",
+    "rxjs": "^7.5.4",
+    "sharp": "^0.30.1",
     "shortid": "^2.2.16",
     "socket.io-redis": "^6.1.1",
     "typeorm": "^0.2.41",
-    "xlsx": "^0.17.5",
+    "xlsx": "^0.18.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.0",
-    "@nestjs/testing": "^8.2.5",
+    "@nestjs/testing": "^8.2.6",
     "@trivago/prettier-plugin-sort-imports": "git+https://github.com/danielwii/prettier-plugin-sort-imports.git#main",
     "@tsconfig/node14": "^1.0.1",
     "@types/ali-oss": "^6",
@@ -146,7 +147,6 @@
     "@types/luxon": "^2",
     "@types/mime-types": "^2",
     "@types/minio": "^7",
-    "@types/mongoose": "^5",
     "@types/mongoose-autopopulate": "^0",
     "@types/morgan": "^1",
     "@types/multer": "^1",
@@ -162,28 +162,28 @@
     "@types/ua-parser-js": "^0",
     "@types/uuid": "^8",
     "@types/xml2js": "^0",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "builder-pattern": "^1.3.0",
-    "eslint": "^8.6.0",
+    "eslint": "^8.8.0",
     "eslint-config-alloy": "^4.4.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.25.4",
     "glob": "^7.2.0",
     "husky": "^7.0.4",
-    "jest": "^27.4.7",
-    "minimatch": "^3.0.4",
+    "jest": "^27.5.1",
+    "minimatch": "^3.0.5",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
-    "prisma": "3.8.0",
+    "prisma": "3.9.2",
     "sqlite3": "^5.0.2",
-    "supertest": "^6.2.1",
-    "ts-jest": "^27.1.2",
-    "ts-node": "^10.4.0",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   },
   "nodemonConfig": {
     "verbose": true,
