--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -11,7 +11,8 @@
     "emitDecoratorMetadata": true,
     "allowJs": true,
     "rootDir": "src",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "baseUrl": "src"
   },
   "include": ["src/**/*"],
   "exclude": ["**/node_modules/*", "**/*.spec.ts", "./dist"]
