--- a/.env.base
+++ b/.env.base
@@ -17,7 +17,7 @@ TYPEORM_LOGGING=error
 # advanced-console | simple-console | file | debug
 TYPEORM_LOGGER=advanced-console
 
-TYPEORM_CONNECTION=mysql
+#TYPEORM_CONNECTION=mysql
 TYPEORM_HOST=
 #TYPEORM_PORT=
 TYPEORM_DATABASE=db_name
