--- a/package.json
+++ b/package.json
@@ -35,84 +35,87 @@
   },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.12",
-    "@apollo/server": "^4.2.1",
+    "@apollo/server": "^4.2.2",
     "@apollo/server-plugin-response-cache": "^4.0.3",
-    "@aws-sdk/client-s3": "^3.216.0",
-    "@aws-sdk/s3-request-presigner": "^3.216.0",
-    "@babel/parser": "^7.20.3",
+    "@aws-sdk/client-s3": "^3.226.0",
+    "@aws-sdk/s3-request-presigner": "^3.226.0",
+    "@babel/parser": "^7.20.5",
+    "@contentful/rich-text-html-renderer": "^16.0.2",
     "@danielwii/asuna-helper": "^0.1.0",
     "@danielwii/asuna-shared": "^0.0.8",
-    "@google-cloud/opentelemetry-cloud-trace-exporter": "^1.1.0",
+    "@google-cloud/opentelemetry-cloud-trace-exporter": "^1.2.0",
     "@metinseylan/nestjs-opentelemetry": "^3.0.0",
-    "@nestjs/apollo": "^10.1.6",
-    "@nestjs/common": "^9.2.0",
-    "@nestjs/core": "^9.2.0",
+    "@nestjs/apollo": "^10.1.7",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/core": "^9.2.1",
     "@nestjs/cqrs": "^9.0.1",
-    "@nestjs/graphql": "^10.1.6",
+    "@nestjs/graphql": "^10.1.7",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.2.0",
-    "@nestjs/platform-socket.io": "^9.2.0",
-    "@nestjs/platform-ws": "^9.2.0",
+    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/platform-socket.io": "^9.2.1",
+    "@nestjs/platform-ws": "^9.2.1",
     "@nestjs/schedule": "^2.1.0",
-    "@nestjs/swagger": "^6.1.3",
+    "@nestjs/swagger": "^6.1.4",
     "@nestjs/terminus": "^9.1.4",
     "@nestjs/typeorm": "^9.0.1",
-    "@nestjs/websockets": "^9.2.0",
+    "@nestjs/websockets": "^9.2.1",
     "@opentelemetry/auto-instrumentations-node": "^0.35.0",
     "@opentelemetry/exporter-jaeger": "^1.8.0",
     "@opentelemetry/resources": "^1.8.0",
     "@opentelemetry/semantic-conventions": "^1.8.0",
-    "@prisma/client": "4.6.1",
-    "@sentry/node": "^7.21.1",
-    "@sentry/tracing": "^7.21.1",
+    "@prisma/client": "4.7.1",
+    "@sendgrid/mail": "^7.7.0",
+    "@sentry/node": "^7.24.2",
+    "@sentry/tracing": "^7.24.2",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.17.1",
     "alipay-sdk": "^3.2.0",
     "amqplib": "^0.10.3",
-    "apollo-opentracing": "^3.0.37",
+    "apollo-opentracing": "^3.0.39",
     "apollo-server-cache-redis": "^3.3.1",
     "apollo-server-express": "^3.11.1",
     "apple-signin-auth": "^1.7.4",
     "bluebird": "^3.7.2",
     "blurhash": "^2.0.4",
     "builder-pattern": "^2.1.0",
-    "cache-manager": "^5.1.3",
+    "cache-manager": "^5.1.4",
     "cache-manager-redis-store": "^3.0.1",
     "chance": "^1.1.9",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "common-tags": "^1.8.2",
     "compression": "^1.7.4",
     "connect-redis": "^6.1.3",
+    "contentful": "^9.2.14",
     "cookie-parser": "^1.4.6",
     "cron-parser": "^4.7.0",
     "date-fns": "^2.29.3",
-    "dayjs": "^1.11.6",
+    "dayjs": "^1.11.7",
     "elastic-apm-node": "^3.40.1",
     "email-templates": "^10.0.1",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "fix-esm": "^1.0.1",
-    "fs-extra": "^10.1.0",
+    "fs-extra": "^11.1.0",
     "geoip-lite": "^1.4.6",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
-    "graphql-tools": "^8.3.12",
+    "graphql-tools": "^8.3.14",
     "graphql-type-json": "^0.3.2",
     "handlebars": "^4.7.7",
-    "helmet": "^6.0.0",
+    "helmet": "^6.0.1",
     "highland": "^2.13.5",
     "ioredis": "^5.2.4",
     "jaeger-client": "^3.19.0",
     "jsondiffpatch": "^0.4.1",
-    "libphonenumber-js": "^1.10.14",
+    "libphonenumber-js": "^1.10.15",
     "lodash": "^4.17.21",
     "lru-cache": "^7.14.1",
     "lru_map": "^0.4.1",
-    "luxon": "^3.1.0",
+    "luxon": "^3.1.1",
     "minio": "^7.0.32",
-    "mongoose": "^6.7.3",
+    "mongoose": "^6.8.0",
     "mongoose-autopopulate": "^0.16.1",
     "morgan": "^1.10.0",
     "node-buffs": "^0.8.21",
@@ -131,16 +134,16 @@
     "redis-dataloader": "^1.0.2",
     "regenerator-runtime": "^0.13.11",
     "response-time": "^2.3.2",
-    "rxjs": "^7.5.7",
+    "rxjs": "^7.6.0",
     "sharp": "^0.31.2",
     "socket.io-redis": "^6.1.1",
-    "typeorm": "^0.3.10",
+    "typeorm": "^0.3.11",
     "xlsx": "^0.18.5",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.1.5",
-    "@nestjs/testing": "^9.2.0",
+    "@nestjs/testing": "^9.2.1",
     "@trivago/prettier-plugin-sort-imports": "git+https://github.com/danielwii/prettier-plugin-sort-imports.git#main",
     "@tsconfig/node18-strictest-esm": "^1.0.1",
     "@types/ali-oss": "^6",
@@ -178,29 +181,29 @@
     "@types/sharp": "^0",
     "@types/supertest": "^2",
     "@types/ua-parser-js": "^0",
-    "@types/uuid": "^8",
+    "@types/uuid": "^9",
     "@types/xml2js": "^0",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "eslint": "^8.28.0",
+    "eslint": "^8.29.0",
     "eslint-config-alloy": "^4.7.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.26.0",
     "glob": "^8.0.3",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
-    "minimatch": "^5.1.0",
+    "minimatch": "^5.1.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.1",
     "pretty-quick": "^3.1.3",
-    "prisma": "4.6.1",
+    "prisma": "4.7.1",
     "sqlite3": "^5.1.2",
-    "supertest": "^6.3.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   },
   "nodemonConfig": {
     "verbose": true,
