refactor: any exception and auth handler

--- a/.env.base
+++ b/.env.base
@@ -4,7 +4,8 @@
 NO_COLOR=
 LOGGER_LEVEL=log
 SECRET_KEY=
-PORT=5000
+PORT=5500
+TZ=UTC
 
 # --- mysql ---
 # default: mysql57 ; mysql56 | mysql57 | postgres
