--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "clean": "rm -rf ./dist",
     "build:nest": "yarn clean && nest build",
-    "build": "yarn clean && tsc --emitDeclarationOnly --declarationDir dist && swc src -d dist",
+    "build": "yarn clean && tsc",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -146,8 +146,6 @@
     "@nestjs/cli": "^9.2.0",
     "@nestjs/testing": "^9.3.9",
     "@serverless-guru/prettier-plugin-import-order": "^0.4.1",
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.40",
     "@tsconfig/node18-strictest-esm": "^1.0.1",
     "@types/ali-oss": "^6",
     "@types/amqplib": "^0",
