--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "@danielwii/asuna-helper": "^0.1.9",
     "@danielwii/asuna-shared": "^0.0.12",
     "@google-cloud/opentelemetry-cloud-trace-exporter": "^2.0.0",
-    "@metinseylan/nestjs-opentelemetry": "^3.0.0",
     "@nestjs/apollo": "^11.0.5",
     "@nestjs/common": "^9.4.0",
     "@nestjs/core": "^9.4.0",
@@ -63,11 +62,14 @@
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.4.0",
     "@opentelemetry/auto-instrumentations-node": "^0.36.5",
-    "@opentelemetry/exporter-jaeger": "^1.12.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.38.0",
     "@opentelemetry/resources": "^1.12.0",
+    "@opentelemetry/sdk-node": "^0.38.0",
     "@opentelemetry/semantic-conventions": "^1.12.0",
     "@sendgrid/mail": "^7.7.0",
     "@sentry/node": "^7.49.0",
+    "@sentry/opentelemetry-node": "^7.49.0",
+    "@sentry/profiling-node": "^0.3.0",
     "@socket.io/redis-adapter": "^8.1.0",
     "accesscontrol": "^2.2.1",
     "ali-oss": "^6.17.1",
