refactor: connection limit issue

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@danielwii/asuna-shared": "^0.0.12",
     "@google-cloud/opentelemetry-cloud-trace-exporter": "^2.0.0",
     "@nestjs/apollo": "^11.0.5",
+    "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.4.0",
     "@nestjs/core": "^9.4.0",
     "@nestjs/cqrs": "^9.0.3",
@@ -79,7 +80,7 @@
     "bluebird": "^3.7.2",
     "blurhash": "^2.0.5",
     "builder-pattern": "^2.2.0",
-    "cache-manager": "^5.2.0",
+    "cache-manager": "^5.2.1",
     "cache-manager-redis-store": "^3.0.1",
     "chance": "^1.1.11",
     "class-transformer": "^0.5.1",
